# BFL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
datastructures/: bfl.h  generation_checker.h  graph.h  ptr_graph.h  status_log.h  stop_paths.h  types.h  utils.h
example/: bfl_example.dimacs  example1.dimacs
